@@ -11,6 +11,7 @@
 - rewritten tiff writer is about 3 - 4x faster at making pyramids
 - jpg, magick, png, tiff readers now use only 1 fd per input image
 - python: use [] to index and slice image bands
+- c++: use [] to band index, () returns a vector<double>
 
 6/2/15 started 7.42.3
 - bump version for back-compat ABI change
